# intent_formalization

./: .gitignore  CLAUDE.md  README.md  consistency.md  consistency_cn.md  consistency_v1_cn.md  formal_definition.md  projection.md  projection_cn.md
bitmap/libs/arch/: Cargo.toml
bitmap/libs/arch/src/: lib.rs
bitmap/libs/arch/src/x86/: io.rs
bitmap/libs/arch/src/x86/cpu/: acpi.rs  cpuid.rs  cr0.rs  cr4.rs  excp.rs  idt.rs  idtr.rs  madt.rs  mod.rs  mxcrs.rs  pit.rs  ring.rs  tss.rs  xapic.rs
bitmap/libs/arch/src/x86/mem/: constants.rs  gdt.rs  gdtr.rs
bitmap/libs/bitmap/: Cargo.toml
bitmap/libs/bitmap/src/: lib.rs  test.rs
bitmap/libs/build-utils/: Cargo.toml
bitmap/libs/build-utils/src/: lib.rs
bitmap/libs/config/: Cargo.toml  build.rs
bitmap/libs/config/src/: lib.rs
bitmap/libs/control-plane-api/: Cargo.toml
bitmap/libs/control-plane-api/src/: lib.rs
bitmap/libs/elf/: Cargo.toml
bitmap/libs/elf/src/: elf32.rs  lib.rs  relocation.rs
bitmap/libs/error/: Cargo.toml
bitmap/libs/error/src/: lib.rs
bitmap/libs/fat32/: Cargo.toml
bitmap/libs/fat32/src/: error.rs  lib.rs
bitmap/libs/fat32/src/fat/: error.rs  file.rs  filesystem.rs  mod.rs  storage.rs  time.rs
bitmap/libs/hwloc/: Cargo.toml
bitmap/libs/hwloc/src/: lib.rs
bitmap/libs/libc_stdlib/: Cargo.toml
bitmap/libs/libc_stdlib/src/: aligned_alloc.rs  block_header.rs  calloc.rs  free.rs  lib.rs  malloc.rs  malloc_usable_size.rs  posix_memalign.rs  realloc.rs
bitmap/libs/libc_string/: Cargo.toml
bitmap/libs/libc_string/src/: lib.rs  memcmp.rs  memcpy.rs  memmove.rs  memset.rs  strlen.rs
bitmap/libs/multibin/: Cargo.toml
bitmap/libs/multibin/src/: lib.rs
bitmap/libs/nanvix/: Cargo.toml
bitmap/libs/nanvix-http/: Cargo.toml
bitmap/libs/nanvix-http/src/: lib.rs  message.rs  server.rs
bitmap/libs/nanvix-http/src/client/: mod.rs  multi_process.rs  single_process.rs  standalone.rs
bitmap/libs/nanvix-registry/: Cargo.toml
bitmap/libs/nanvix-registry/src/: checksum.rs  deployment.rs  github_client.rs  lib.rs  machine.rs  metadata.rs  package.rs  progress.rs  rate_limiter.rs  release.rs  tarball.rs  tempfile.rs
bitmap/libs/nanvix-sandbox/: Cargo.toml
bitmap/libs/nanvix-sandbox-cache/: Cargo.toml
bitmap/libs/nanvix-sandbox-cache/src/: config.rs  lib.rs
bitmap/libs/nanvix-sandbox/src/: config.rs  initialized.rs  lib.rs  linuxd_args.rs  netns.rs  running.rs  sandbox_config.rs  snapshot_dir_handle.rs  tag.rs  tcp_port.rs  uninitialized.rs  uservm_args.rs
bitmap/libs/nanvix-sandbox/src/sandbox/: gateway_ready.rs  gateway_ready_tests.rs  mod.rs
bitmap/libs/nanvix-sandbox/src/sandbox/multi_process/: linuxd.rs  mod.rs  netns_exec.rs  uservm.rs
bitmap/libs/nanvix-sandbox/src/sandbox/single_process/: linuxd.rs  mod.rs  uservm.rs
bitmap/libs/nanvix-sandbox/src/simple_cache/: config.rs  mod.rs
bitmap/libs/nanvix-sandbox/src/standalone/: mod.rs  uservm.rs
bitmap/libs/nanvix-terminal/: Cargo.toml
bitmap/libs/nanvix-terminal/src/: lib.rs  multi_process.rs  single_process.rs  standalone.rs
bitmap/libs/nanvix/src/: lib.rs
bitmap/libs/no_fail/: Cargo.toml
bitmap/libs/no_fail/src/: lib.rs
bitmap/libs/nvx/: Cargo.toml
bitmap/libs/nvx/src/: lib.rs  panic.rs  pie.rs
bitmap/libs/posix/: Cargo.toml
bitmap/libs/posix/src/: dummy.rs  errno.rs  lib.rs  netdb.rs  poll.rs  pwd.rs  utime.rs  venv.rs
bitmap/libs/posix/src/arpa/: inet.rs  mod.rs
bitmap/libs/posix/src/dlfcn/: mod.rs
bitmap/libs/posix/src/pthread/: mod.rs  mutex.rs  tda.rs
bitmap/libs/posix/src/sys/: ioctl.rs  mod.rs  resource.rs
bitmap/libs/posix/src/sys/stat/: mod.rs
bitmap/libs/posix/src/sys/time/: mod.rs  utimes.rs
bitmap/libs/posix/src/sys/times/: mod.rs
bitmap/libs/posix/src/sys/uio/: mod.rs
bitmap/libs/posix/src/sys/utsname/: mod.rs
bitmap/libs/proc/: Cargo.toml
bitmap/libs/proc/src/: identity.rs  lib.rs
bitmap/libs/proc/src/daemon/: mod.rs
bitmap/libs/proc/src/message/: lookup.rs  mod.rs  shutdown.rs  signup.rs
bitmap/libs/proc/src/syscall/: getegid.rs  geteuid.rs  getgid.rs  getuid.rs  lookup.rs  mod.rs  signup.rs
bitmap/libs/profiler/: Cargo.toml
bitmap/libs/profiler/src/: lib.rs  scope.rs
bitmap/libs/raw-array/: Cargo.toml
bitmap/libs/raw-array/src/: lib.rs  lib.spec.rs  test.rs
bitmap/libs/slab/: Cargo.toml
bitmap/libs/slab/src/: lib.rs  test.rs
bitmap/libs/static_assert/: Cargo.toml
bitmap/libs/static_assert/src/: lib.rs
bitmap/libs/sys/: Cargo.toml
bitmap/libs/sys/src/: exit_status.rs  lib.rs
bitmap/libs/sys/src/sys/: config.rs  mod.rs  number.rs
bitmap/libs/sys/src/sys/event/: descriptor.rs  information.rs
bitmap/libs/sys/src/sys/ipc/: typ.rs
bitmap/libs/sys/src/sys/kcall/: debug.rs  event.rs  ipc.rs  mod.rs  pm.rs  sched.rs
bitmap/libs/sys/src/sys/mm/: alignment.rs  mmio.rs  mod.rs
bitmap/libs/sysalloc/: Cargo.toml
bitmap/libs/sysalloc/src/: allocator.rs  heap.rs  lib.rs  tda.rs  vaddr.rs
bitmap/libs/sysapi/: Cargo.toml
bitmap/libs/sysapi/src/: arpa_inet.rs  dirent.rs  errno.rs  fcntl.rs  ffi.rs  lib.rs  limits.rs  netdb.rs  netinet_in.rs  netinet_tcp.rs  poll.rs  pthread.rs  pwd.rs  sched.rs  stddef.rs  sys_mman.rs  sys_resource.rs  sys_select.rs  sys_socket.rs  sys_stat.rs  sys_times.rs  sys_types.rs  sys_uio.rs  sys_un.rs  time.rs  unistd.rs  utime.rs
bitmap/libs/syscall/: Cargo.toml
bitmap/libs/syscall/src/: errno.rs  lib.rs  venv.rs
bitmap/libs/syscall/src/arpa/: inet.rs  mod.rs
bitmap/libs/syscall/src/dirent/: mod.rs
bitmap/libs/syscall/src/dlfcn/: mod.rs
bitmap/libs/syscall/src/fcntl/: mod.rs
bitmap/libs/syscall/src/message/: long.rs  mod.rs  part.rs
bitmap/libs/syscall/src/netinet/: in_.rs  mod.rs  tcp.rs
bitmap/libs/syscall/src/poll/: bindings.rs  message.rs  mod.rs  syscall.rs
bitmap/libs/syscall/src/pthread/: mod.rs
bitmap/libs/syscall/src/safe/: mod.rs  time.rs
bitmap/libs/syscall/src/sched/: mod.rs
bitmap/libs/syscall/src/signal/: mod.rs
bitmap/libs/syscall/src/sys/: mod.rs  uio.rs  un.rs
bitmap/libs/syscall/src/time/: mod.rs
bitmap/libs/syscall/src/unistd/: mod.rs
(+13703 files in other folders)
