# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "arch"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Architecture-Specific Library"
homepage.workspace = true

[dependencies]
cfg-if = { workspace = true }
config = { workspace = true }
error = { workspace = true }
static_assert = { workspace = true }
sys = { workspace = true }
core = { version = "1.0.1", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { workspace = true, optional = true }

[build-dependencies]
cfg-if = { workspace = true }

[features]
default = ["microvm"]
std = []
rustc-dep-of-std = [
    "core",
    "config/rustc-dep-of-std",
    "compiler_builtins/rustc-dep-of-std",
    "static_assert/rustc-dep-of-std",
    "error/rustc-dep-of-std",
    "sys/rustc-dep-of-std",
    "cfg-if/rustc-dep-of-std",
]

# Machine Types
hyperlight = [
    "putb",
    "puts",
    "stdio",
    "acpi",
    "cpuid",
    "ioapic",
    "madt",
    "msr",
    "pic",
    "pit",
    "xapic",
]
microvm = [
    "putb",
    "stdio",
    "acpi",
    "cpuid",
    "ioapic",
    "madt",
    "msr",
    "pic",
    "pit",
    "xapic",
]
pc = [
    "putb",
    "bios",
    "cmos",
    "mboot",
    "pit",
    "acpi",
    "cpuid",
    "ioapic",
    "madt",
    "msr",
    "pic",
    "xapic",
]
qemu-pc = ["pc"]
qemu-pc-smp = ["qemu-pc", "smp"]
qemu-baremetal = ["pc"]
qemu-baremetal-smp = ["qemu-baremetal", "smp"]
qemu-isapc = ["pc"]

# Architecture Features
acpi = []
cpuid = []
ioapic = []
madt = []
msr = []
pic = []
xapic = []

# Platform Features
smp = []
bios = []
cmos = []
mboot = []
pit = []
putb = []
puts = []
stdio = []

[lints]
workspace = true
