# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "bitmap"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[package.metadata.verus]
verify = true

[lib]
crate-type = ["lib"]

[dependencies]
error = { workspace = true, features = ["verus"] }
raw-array = { workspace = true }
sys = { workspace = true }
vstd = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[features]
default = []
std = ["sys/std"]

[lints]
workspace = true
