# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "config"
version.workspace = true
license-file.workspace = true
authors.workspace = true
edition.workspace = true
description = "Configuration and constants for Nanvix"
homepage.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
cfg-if = { workspace = true }
core = { version = "1.0.1", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { workspace = true, optional = true }

[features]
default = []
std = []
hyperlight = []
microvm = []
pc = []
rustc-dep-of-std = [
    "core",
    "cfg-if/rustc-dep-of-std",
    "compiler_builtins/rustc-dep-of-std",
]

[build-dependencies]
build-utils = { workspace = true }

[lints]
workspace = true
