# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "control-plane-api"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Control-Plane API Library"
homepage.workspace = true

[dependencies]
config = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
anyhow = { workspace = true }

[features]
default = []

[lints]
workspace = true
