# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "elf"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
goblin = { workspace = true, optional = true, features = [
    "elf32",
    "elf64",
    "endian_fd",
    "mach32",
    "mach64",
] }
num_enum = { workspace = true, optional = true }
static_assert = { workspace = true, optional = true }
sys = { workspace = true }

[features]
default = []
std = []
relocation = ["dep:goblin", "dep:num_enum", "dep:static_assert"]

[lints]
workspace = true
