# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "error"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Error Codes for Nanvix"
homepage.workspace = true

[package.metadata.verus]
verify = true

[lib]
crate-type = ["lib"]

[dependencies]
core = { version = "1.0.1", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { workspace = true, optional = true }
sysapi = { workspace = true }
vstd = { workspace = true, optional = true }

[features]
default = []
std = []
verus = ["vstd"]
rustc-dep-of-std = [
    "core",
    "compiler_builtins/rustc-dep-of-std",
    "sysapi/rustc-dep-of-std",
]

[lints]
workspace = true
