# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "hwloc"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Hardware Locality Library"
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }

[lints]
workspace = true
