# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "libc_stdlib"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
alloc = { version = "1.0.1", optional = true, package = "rustc-std-workspace-alloc" }
cfg-if = { workspace = true }
compiler_builtins = { workspace = true, optional = true }
config = { workspace = true }
core = { version = "1.0.1", optional = true, package = "rustc-std-workspace-core" }
flexi_logger = { workspace = true, optional = true }
log = { workspace = true, optional = true }
static_assert = { workspace = true }
sysapi = { workspace = true }
syslog = { workspace = true }

[features]
default = ["syslog/default"]
# Enables the use of the Rust Standard Library.
std = ["syslog/std"]

# Enables this crate to be used as a dependency of the Rust standard library.
rustc-dep-of-std = [
    "alloc",
    "core",
    "cfg-if/rustc-dep-of-std",
    "compiler_builtins/rustc-dep-of-std",
    "config/rustc-dep-of-std",
    "static_assert/rustc-dep-of-std",
    "sysapi/rustc-dep-of-std",
    "syslog/rustc-dep-of-std",
]

# Logging feature passthrough (match syslog crate features)
trace = ["syslog/trace"]
debug = ["syslog/debug"]
info = ["syslog/info"]
warn = ["syslog/warn"]
error = ["syslog/error"]
panic = ["syslog/panic"]

[lints]
workspace = true
