# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "libc_string"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
sysapi = { workspace = true }

[features]
default = []
# Enables the use of the Rust Standard Library.
std = []

[lints]
workspace = true
