# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "multibin"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Multibinary image format for Nanvix"
homepage.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
error = { workspace = true }

[features]
default = []
std = []

[lints]
workspace = true
