# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "nanvix-http"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "HTTP Interface for Nanvix"
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
linuxd = { workspace = true, optional = true }
log = { workspace = true }
nanvix-registry = { workspace = true }
nanvix-sandbox = { workspace = true, optional = true }
nanvix-sandbox-cache = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
syscomm = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uservm = { workspace = true }
user-vm-api = { workspace = true }

[features]
default = ["microvm", "multi-process"]
single-process = ["linuxd", "nanvix-sandbox", "nanvix-sandbox/single-process"]
multi-process = ["nanvix-sandbox-cache", "nanvix-sandbox-cache/multi-process"]
standalone = ["nanvix-sandbox", "nanvix-sandbox/standalone"]
gdb = ["uservm/gdb"]
hyperlight = [
    "config/hyperlight",
    "uservm/hyperlight",
    "nanvix-sandbox-cache?/hyperlight",
    "nanvix-sandbox?/hyperlight",
]
microvm = [
    "config/microvm",
    "uservm/microvm",
    "nanvix-sandbox-cache?/microvm",
    "nanvix-sandbox?/microvm",
]

[lints]
workspace = true
