# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "nanvix-sandbox-cache"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Sandbox cache management for Nanvix"
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
log = { workspace = true }
nanvix-sandbox = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["microvm", "multi-process"]
multi-process = ["nanvix-sandbox/multi-process"]
hyperlight = ["config/hyperlight", "nanvix-sandbox/hyperlight"]
microvm = ["config/microvm", "nanvix-sandbox/microvm"]

[lints]
workspace = true
