# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "nanvix-sandbox"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Sandbox management for Nanvix"
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
build-utils = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
control-plane-api = { workspace = true }
hwloc = { workspace = true }
linuxd = { workspace = true, optional = true }
libc = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
syscomm = { workspace = true }
sys = { workspace = true }
tokio = { workspace = true, features = ["full"] }
user-vm-api = { workspace = true }
uservm = { workspace = true }

[features]
default = ["microvm", "multi-process"]
# If enabled this feature is enabled, the Linux Daemon (linuxd) and User VM (uservm) are embedded
# into the sandbox.
single-process = ["linuxd"]
multi-process = ["linuxd"]
standalone = []
gdb = ["uservm/gdb"]
hyperlight = ["config/hyperlight", "uservm/hyperlight"]
microvm = ["config/microvm", "uservm/microvm"]

[lints]
workspace = true
