# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "nanvix"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "A crate for interacting with Nanvix"
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
hwloc = { workspace = true }
linuxd = { workspace = true, optional = true }
nanvix-http = { workspace = true }
nanvix-registry = { workspace = true }
nanvix-sandbox = { workspace = true }
nanvix-sandbox-cache = { workspace = true, optional = true }
nanvix-terminal = { workspace = true }
sys = { workspace = true, features = ["std"], optional = true }
syscall = { workspace = true, features = ["std"], optional = true }
syscomm = { workspace = true }
syslog = { workspace = true, features = ["std"] }
uservm = { workspace = true, optional = true }

[features]
default = ["microvm", "multi-process"]
internal-api = ["sys", "syscall", "uservm"]
single-process = [
    "linuxd",
    "nanvix-http/single-process",
    "nanvix-sandbox/single-process",
    "nanvix-terminal/single-process",
]
multi-process = [
    "nanvix-sandbox-cache",
    "nanvix-http/multi-process",
    "nanvix-sandbox/multi-process",
    "nanvix-sandbox-cache/multi-process",
    "nanvix-terminal/multi-process",
]
standalone = [
    "nanvix-http/standalone",
    "nanvix-sandbox/standalone",
    "nanvix-terminal/standalone",
]
gdb = ["nanvix-http/gdb", "nanvix-sandbox/gdb", "nanvix-terminal/gdb"]
hyperlight = [
    "config/hyperlight",
    "nanvix-http/hyperlight",
    "nanvix-sandbox/hyperlight",
    "nanvix-sandbox-cache?/hyperlight",
    "nanvix-terminal/hyperlight",
    "uservm?/hyperlight",
]
microvm = [
    "config/microvm",
    "nanvix-http/microvm",
    "nanvix-sandbox/microvm",
    "nanvix-sandbox-cache?/microvm",
    "nanvix-terminal/microvm",
    "uservm?/microvm",
]

[lints]
workspace = true
