# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "nvx"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Nanvix Runtime Library"
homepage.workspace = true

[dependencies]
alloc = { version = "1.0.1", optional = true, package = "rustc-std-workspace-alloc" }
cfg-if = { workspace = true }
config = { workspace = true }
elf = { workspace = true }
syslog = { workspace = true, default-features = true }
sys = { workspace = true, features = ["kcall"] }
core = { version = "1.0.1", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { workspace = true, optional = true }
vfs = { workspace = true, optional = true }

# Platform-specific dependencies.
[target.'cfg(any(target_os = "none", target_os = "nanvix"))'.dependencies]
# The sysalloc crate provides a memory allocator implementation for Nanvix.
# For Linux the allocator is provided by the C library, so sysalloc is not required.
sysalloc = { workspace = true }

[features]
default = ["staticlib"]
staticlib = []
standalone = ["dep:vfs"]
rustc-dep-of-std = [
    "alloc",
    "core",
    "compiler_builtins/rustc-dep-of-std",
    "config/rustc-dep-of-std",
    "sysalloc/rustc-dep-of-std",
    "sys/rustc-dep-of-std",
    "syslog/rustc-dep-of-std",
    "cfg-if/rustc-dep-of-std",
]

# Logging Features
trace = ["syslog/trace"]
debug = ["syslog/debug"]
info = ["syslog/info"]
warn = ["syslog/warn"]
error = ["syslog/error"]
panic = ["syslog/panic"]

[lints]
workspace = true
