# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "posix"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "POSIX Library"
homepage.workspace = true

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
nvx = { workspace = true }
sys = { workspace = true }
cfg-if = { workspace = true }
num_enum = { workspace = true }
spin = { workspace = true, features = ["lazy", "spin_mutex"] }
syscall = { workspace = true, features = ["staticlib", "syscall", "dlfcn"] }
static_assert = { workspace = true }
sysapi = { workspace = true }
sysalloc = { workspace = true, optional = true }
syslog = { workspace = true, default-features = true, optional = true }
type-safe = { workspace = true }

[features]
default = ["syscall", "allocator", "staticlib"]
allocator = ["dep:sysalloc"]
syscall = ["syslog", "syscall/dlfcn"]
standalone = ["syscall/standalone"]
std = []
staticlib = ["nvx/staticlib"]

# Logging
trace = ["syslog/trace"]
debug = ["syslog/debug"]
info = ["syslog/info"]
warn = ["syslog/warn"]
error = ["syslog/error"]
panic = ["syslog/panic"]

[lints]
workspace = true
