# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "proc"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Process Management Daemon"
homepage.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
sys = { workspace = true }
static_assert = { workspace = true }
syslog = { workspace = true, default-features = true, optional = true }

[build-dependencies]
cc = { workspace = true }
cfg-if = { workspace = true }

[features]
default = ["syslog"]
std = []
syscall = []
daemon = ["syslog"]

[lints]
workspace = true
