# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "raw-array"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "Raw Array Container"
homepage.workspace = true

[lib]
crate-type = ["lib"]

[package.metadata.verus]
verify = true

[dependencies]
cfg-if = { workspace = true }
error = { workspace = true, features = ["verus"] }
sys = { workspace = true }
vstd = { workspace = true }

[features]
default = []
std = ["sys/std"]

[lints]
workspace = true
