# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "slab"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
bitmap = { workspace = true }
raw-array = { workspace = true }
sys = { workspace = true }

[features]
default = []
std = ["sys/std", "bitmap/std", "raw-array/std"]

[lints]
workspace = true
