# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "sys"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "System Library"
homepage.workspace = true

[dependencies]
config = { workspace = true }
error = { workspace = true }
static_assert = { workspace = true }
core = { version = "1.0.1", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { workspace = true, optional = true }

[features]
std = []
kcall = []
rustc-dep-of-std = [
    "core",
    "config/rustc-dep-of-std",
    "compiler_builtins/rustc-dep-of-std",
    "static_assert/rustc-dep-of-std",
    "error/rustc-dep-of-std",
]

[lints]
workspace = true
