# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "sysalloc"
version.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
description = "System Allocator"
homepage.workspace = true

[dependencies]
alloc = { version = "1.0.1", optional = true, package = "rustc-std-workspace-alloc" }
arch = { workspace = true }
compiler_builtins = { workspace = true, optional = true }
config = { workspace = true }
core = { version = "1.0.1", optional = true, package = "rustc-std-workspace-core" }
spin = { workspace = true, features = ["lazy", "spin_mutex"] }
static_assert = { workspace = true }
sys = { workspace = true, features = ["kcall"] }
syslog = { workspace = true, default-features = true }
talc = { workspace = true }

[features]
default = []
std = []
rustc-dep-of-std = [
    "alloc",
    "core",
    "arch/rustc-dep-of-std",
    "talc/rustc-dep-of-std",
    "config/rustc-dep-of-std",
    "compiler_builtins/rustc-dep-of-std",
    "sys/rustc-dep-of-std",
    "syslog/rustc-dep-of-std",
    "spin/rustc-dep-of-std",
    "static_assert/rustc-dep-of-std",
]

# Logging Features
trace = ["syslog/trace"]
debug = ["syslog/debug"]
info = ["syslog/info"]
warn = ["syslog/warn"]
error = ["syslog/error"]
panic = ["syslog/panic"]

[lints]
workspace = true
